# wind

./: .gitignore  CMakeLists.txt  LICENSE  README.md  echo.wd  main.wd  test.wd
doc/: guides.md  introduction.md  metafunc.md  syntax.md
doc/discussions/: memory.md
ide-plugins/sublime/: README.md  wind.sublime-syntax
src/ast/: Env.cpp  Env.h  ast.h
src/ast/expr/: Block.cpp  Block.h  Call.cpp  Call.h  Chunk.h  Dot.cpp  Dot.h  Equal.cpp  Equal.h  Expr.cpp  Expr.h  Identifier.cpp  Identifier.h  Index.cpp  Index.h  Infix.cpp  Infix.h  Unary.cpp  Unary.h
src/ast/expr/Block/: StructConstr.cpp  StructConstr.h
src/ast/expr/Brack/: ArrayConstr.cpp  ArrayConstr.h
src/ast/expr/I/: IFunc.h
src/ast/expr/Literal/: BoolLit.cpp  BoolLit.h  FloatLit.cpp  FloatLit.h  IntLit.cpp  IntLit.h  StrLit.cpp  StrLit.h
src/ast/expr/S/: Alloc.cpp  Alloc.h  Callee.cpp  Callee.h  Cast.cpp  Cast.h  Cond.cpp  Cond.h  Extern.h  Func.cpp  Func.h  If.cpp  If.h  Impl.cpp  Impl.h  Load.cpp  Load.h  Loop.cpp  Loop.h  Protocol.cpp  Protocol.h  Sizeof.cpp  Sizeof.h  Store.cpp  Store.h  Struct.cpp  Struct.h  TupleConstr.cpp  TupleConstr.h  Var.cpp  Var.h
src/compiler/: Compiler.cpp  Compiler.h
src/core/: CompileCtx.cpp  CompileCtx.h  Core.cpp  Core.h  Type.cpp  Type.h
src/core/types/: boxed.h  itype.cpp  itype.h  named.cpp  named.h  primitives.h  quote.h  reference.h
src/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/main/: CmdArgs.cpp  CmdArgs.h  main.cpp
src/parser/: Parser+Atom.cpp  Parser+Block.cpp  Parser+Brack.cpp  Parser+S.cpp  Parser+Util.cpp  Parser.cpp  Parser.h
src/runtime/: runtime.cpp  runtime.h
src/std/: socket.cpp  socket.h  vm.cpp  vm.h
src/util/: Util.cpp  Util.h
